corpus/hy-0-28.txt
================================================================================
hy_0_28_annotate_and_dot
================================================================================

(setv #^ int x 1)
(. foo bar baz)

--------------------------------------------------------------------------------

(source_file
  (expression
    (symbol)
    (annotate
      (symbol))
    (symbol)
    (int))
  (dot_expression
    (symbol)
    (symbol)
    (symbol)))

================================================================================
hy_0_28_unpack_reader_sugar
================================================================================

(f #* [1 2] #** {"x" 1 "y" 2})

--------------------------------------------------------------------------------

(source_file
  (expression
    (symbol)
    (unpack
      (list
        (int)
        (int)))
    (unpack_map
      (dict
        (string)
        (int)
        (string)
        (int)))))
