corpus/hy-0-29.txt
================================================================================
hy_0_29_bracket_string
================================================================================

#[TAG[bracket
string]TAG]

--------------------------------------------------------------------------------

(source_file
  (bracket_string))

================================================================================
hy_0_29_fstring_basic
================================================================================

(f"{(+ 1 2)}")

--------------------------------------------------------------------------------

(source_file
  (expression
    (string)))
