corpus/hy-1-0.txt
================================================================================
hy_1_0_reader_macro_call
================================================================================

(#foo [1 2 3])

--------------------------------------------------------------------------------

(source_file
  (expression
    (symbol)
    (list
      (int)
      (int)
      (int))))

================================================================================
hy_1_0_quote_chain
================================================================================

('`(~@([1 2])))

--------------------------------------------------------------------------------

(source_file
  (expression
    (quote
      (quasiquote
        (expression
          (unquote_splice
            (expression
              (list
                (int)
                (int)))))))))
