corpus/hy-1-1.txt
================================================================================
hy_1_1_pragma
================================================================================

(pragma :hy I.hello)

--------------------------------------------------------------------------------

(source_file
  (expression
    (symbol)
    (keyword)
    (dotted_identifier
      (symbol)
      (symbol))))

================================================================================
hy_1_1_unquote_splice_spacing
================================================================================

`(~ @foo)

--------------------------------------------------------------------------------

(source_file
  (quasiquote
    (expression
      (unquote
        (symbol)))))
