corpus/hy-1-2.txt
================================================================================
hy_1_2_setv_chain
================================================================================

(setv :chain x y 5)

--------------------------------------------------------------------------------

(source_file
  (expression
    (symbol)
    (keyword)
    (symbol)
    (symbol)
    (int)))

================================================================================
hy_1_2_setv_chain_nested
================================================================================

(setv :chain a b [1 2 3])

--------------------------------------------------------------------------------

(source_file
  (expression
    (symbol)
    (keyword)
    (symbol)
    (symbol)
    (list
      (int)
      (int)
      (int))))
